envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_ws_to_ws
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                upgrade_configs:
                  - upgrade_type: websocket
                use_remote_address: true
                codec_type: auto
                route_config:
                  name: local_route
                  max_direct_response_body_size_bytes: 16384
                  virtual_hosts:
                    - name: app
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/documents"
                          route:
                            cluster: documents_app
                        - match:
                            prefix: "/app"
                          direct_response:
                            status: 200
                            body:
                              filename: /static/index.html
                          response_headers_to_add:
                            - append: true
                              header:
                                key: Content-Type
                                value: text/html
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: documents_app
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: documents_app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: http-server
                      port_value: 8000
